# hello_world

./: .gitignore  ARCHITECTURE.md  README.md  config.example.yaml  demo_discovery.py  pyproject.toml  requirements.txt
capacity_manager/: __main__.py
capacity_manager/analyzer/: capacity_analyzer.py
capacity_manager/cli/: __init__.py  main.py
capacity_manager/config/: settings.py
capacity_manager/cost_calculator/: __init__.py  calculator.py
capacity_manager/discovery/: __init__.py  channel_discovery.py  classifier.py
capacity_manager/forecasting/: __init__.py  predictor.py
capacity_manager/grafana_api/: client.py
capacity_manager/metrics_collector/: collector.py
capacity_manager/models/: analysis.py  channel.py
capacity_manager/recommendations/: __init__.py  engine.py
capacity_manager/reporters/: console_reporter.py  csv_reporter.py  html_reporter.py
