[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capacity-manager"
version = "0.3.1"
description = "CLI utility for Grafana metrics analysis and capacity management"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Capacity Management Team"}
]
dependencies = [
    "click>=8.1.0",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "pandas>=2.1.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.2",
    "plotly>=5.18.0",
    "python-dateutil>=2.8.2",
    "openpyxl>=3.1.0",
    "tabulate>=0.9.0",
]

[project.scripts]
capacity-manager = "capacity_manager.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["capacity_manager*"]
